--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,4 +1,4 @@
-name: Test
+name: Listing S3 buckets
 
 on:
   push:
@@ -7,8 +7,18 @@ on:
   workflow_dispatch:
 
 jobs:
-  log_message:
+  listing_buckets:
     runs-on: ubuntu-latest
     steps:
       - name: Log 
-        run: echo "The workflow is working!"
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          role-to-assume: ${{ secrets.IAM_ROLE}}
+          aws-region: ${{ secrets.AWS_REGION }}
+
+      - name: List S3 Buckets
+        env:
+          AWS_REGION: ${{ secret.AWS_REGION }}
+          run: |
+            echo "Listing S3 Buckets"
+            aws s3 ls
