--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -10,7 +10,7 @@ permissions:
   id-token: write   # This is required for requesting the JWT
   contents: read    # This is required for actions/checkout
 
-  
+
 jobs:
   creating_bucket:
     runs-on: ubuntu-latest
@@ -28,7 +28,7 @@ jobs:
         uses: hashicorp/setup-terraform@v3
 
       - name: Initialize Terraform
-        run: terraform init -reconfigure
+        run: terraform init 
         working-directory: terraform
 
       - name: Terraform Plan
@@ -44,4 +44,10 @@ jobs:
           TF_VAR_bucket_name: ${{ secrets.BUCKET_NAME }}
         run: terraform apply -auto-approve
         working-directory: terraform
+
+      - name: Uploading files to S3 Bucket
+        run: |
+          aws s3 cp index.html s3://${{ secrets.BUCKET_NAME }}/index.html
+          aws s3 cp --recursive images/ s3://${{ secrets.BUCKET_NAME }}/images/
+          aws s3 cp --recursive styles/ s3://${{ secrets.BUCKET_NAME }}/styles/
         
